// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapPaddingRight renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: 0;
  -moz-scroll-snap-padding-right: 0;
  -ms-scroll-snap-padding-right: 0;
  scroll-snap-padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 0;
  -moz-scroll-snap-padding-right: 0;
  -ms-scroll-snap-padding-right: 0;
  scroll-snap-padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 0;
  -moz-scroll-snap-padding-right: 0;
  -ms-scroll-snap-padding-right: 0;
  scroll-snap-padding-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 0;
  -moz-scroll-snap-padding-right: 0;
  -ms-scroll-snap-padding-right: 0;
  scroll-snap-padding-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: hasnot;
  -moz-scroll-snap-padding-right: hasnot;
  -ms-scroll-snap-padding-right: hasnot;
  scroll-snap-padding-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: has;
  -moz-scroll-snap-padding-right: has;
  -ms-scroll-snap-padding-right: has;
  scroll-snap-padding-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: hasnot;
  -moz-scroll-snap-padding-right: hasnot;
  -ms-scroll-snap-padding-right: hasnot;
  scroll-snap-padding-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: has;
  -moz-scroll-snap-padding-right: has;
  -ms-scroll-snap-padding-right: has;
  scroll-snap-padding-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: invalid.path.1;
  -moz-scroll-snap-padding-right: invalid.path.1;
  -ms-scroll-snap-padding-right: invalid.path.1;
  scroll-snap-padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: invalid.path.1;
  -moz-scroll-snap-padding-right: invalid.path.1;
  -ms-scroll-snap-padding-right: invalid.path.1;
  scroll-snap-padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: invalid.path.1;
  -moz-scroll-snap-padding-right: invalid.path.1;
  -ms-scroll-snap-padding-right: invalid.path.1;
  scroll-snap-padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: invalid.path.1;
  -moz-scroll-snap-padding-right: invalid.path.1;
  -ms-scroll-snap-padding-right: invalid.path.1;
  scroll-snap-padding-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: -54881;
  -moz-scroll-snap-padding-right: -54881;
  -ms-scroll-snap-padding-right: -54881;
  scroll-snap-padding-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: -54881;
  -moz-scroll-snap-padding-right: -54881;
  -ms-scroll-snap-padding-right: -54881;
  scroll-snap-padding-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: -42365;
  -moz-scroll-snap-padding-right: -42365;
  -ms-scroll-snap-padding-right: -42365;
  scroll-snap-padding-right: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: -42365;
  -moz-scroll-snap-padding-right: -42365;
  -ms-scroll-snap-padding-right: -42365;
  scroll-snap-padding-right: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: July;
    -moz-scroll-snap-padding-right: July;
    -ms-scroll-snap-padding-right: July;
    scroll-snap-padding-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: September;
    -moz-scroll-snap-padding-right: September;
    -ms-scroll-snap-padding-right: September;
    scroll-snap-padding-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: July;
    -moz-scroll-snap-padding-right: July;
    -ms-scroll-snap-padding-right: July;
    scroll-snap-padding-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: September;
    -moz-scroll-snap-padding-right: September;
    -ms-scroll-snap-padding-right: September;
    scroll-snap-padding-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: May;
    -moz-scroll-snap-padding-right: May;
    -ms-scroll-snap-padding-right: May;
    scroll-snap-padding-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: June;
    -moz-scroll-snap-padding-right: June;
    -ms-scroll-snap-padding-right: June;
    scroll-snap-padding-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: April;
    -moz-scroll-snap-padding-right: April;
    -ms-scroll-snap-padding-right: April;
    scroll-snap-padding-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: May;
    -moz-scroll-snap-padding-right: May;
    -ms-scroll-snap-padding-right: May;
    scroll-snap-padding-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: June;
    -moz-scroll-snap-padding-right: June;
    -ms-scroll-snap-padding-right: June;
    scroll-snap-padding-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-padding-right: April;
    -moz-scroll-snap-padding-right: April;
    -ms-scroll-snap-padding-right: April;
    scroll-snap-padding-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-right: July;
    -moz-scroll-snap-padding-right: July;
    -ms-scroll-snap-padding-right: July;
    scroll-snap-padding-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-right: September;
    -moz-scroll-snap-padding-right: September;
    -ms-scroll-snap-padding-right: September;
    scroll-snap-padding-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-padding-right: July;
    -moz-scroll-snap-padding-right: July;
    -ms-scroll-snap-padding-right: July;
    scroll-snap-padding-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-right: September;
    -moz-scroll-snap-padding-right: September;
    -ms-scroll-snap-padding-right: September;
    scroll-snap-padding-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: November;
    -moz-scroll-snap-padding-right: November;
    -ms-scroll-snap-padding-right: November;
    scroll-snap-padding-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-right: August;
    -moz-scroll-snap-padding-right: August;
    -ms-scroll-snap-padding-right: August;
    scroll-snap-padding-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-right: January;
    -moz-scroll-snap-padding-right: January;
    -ms-scroll-snap-padding-right: January;
    scroll-snap-padding-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: December;
    -moz-scroll-snap-padding-right: December;
    -ms-scroll-snap-padding-right: December;
    scroll-snap-padding-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-right: April;
    -moz-scroll-snap-padding-right: April;
    -ms-scroll-snap-padding-right: April;
    scroll-snap-padding-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: May;
    -moz-scroll-snap-padding-right: May;
    -ms-scroll-snap-padding-right: May;
    scroll-snap-padding-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-right: June;
    -moz-scroll-snap-padding-right: June;
    -ms-scroll-snap-padding-right: June;
    scroll-snap-padding-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-padding-right: January;
    -moz-scroll-snap-padding-right: January;
    -ms-scroll-snap-padding-right: January;
    scroll-snap-padding-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: December;
    -moz-scroll-snap-padding-right: December;
    -ms-scroll-snap-padding-right: December;
    scroll-snap-padding-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-padding-right: April;
    -moz-scroll-snap-padding-right: April;
    -ms-scroll-snap-padding-right: April;
    scroll-snap-padding-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-padding-right: May;
    -moz-scroll-snap-padding-right: May;
    -ms-scroll-snap-padding-right: May;
    scroll-snap-padding-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-padding-right: June;
    -moz-scroll-snap-padding-right: June;
    -ms-scroll-snap-padding-right: June;
    scroll-snap-padding-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: 54881;
  -moz-scroll-snap-padding-right: 54881;
  -ms-scroll-snap-padding-right: 54881;
  scroll-snap-padding-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 54881;
  -moz-scroll-snap-padding-right: 54881;
  -ms-scroll-snap-padding-right: 54881;
  scroll-snap-padding-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 42365;
  -moz-scroll-snap-padding-right: 42365;
  -ms-scroll-snap-padding-right: 42365;
  scroll-snap-padding-right: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: 42365;
  -moz-scroll-snap-padding-right: 42365;
  -ms-scroll-snap-padding-right: 42365;
  scroll-snap-padding-right: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: July;
  -moz-scroll-snap-padding-right: July;
  -ms-scroll-snap-padding-right: July;
  scroll-snap-padding-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: July;
  -moz-scroll-snap-padding-right: July;
  -ms-scroll-snap-padding-right: July;
  scroll-snap-padding-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: June;
  -moz-scroll-snap-padding-right: June;
  -ms-scroll-snap-padding-right: June;
  scroll-snap-padding-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: June;
  -moz-scroll-snap-padding-right: June;
  -ms-scroll-snap-padding-right: June;
  scroll-snap-padding-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapPaddingRight renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-padding-right: DarkSlateBlue;
  -moz-scroll-snap-padding-right: DarkSlateBlue;
  -ms-scroll-snap-padding-right: DarkSlateBlue;
  scroll-snap-padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: DarkSlateBlue;
  -moz-scroll-snap-padding-right: DarkSlateBlue;
  -ms-scroll-snap-padding-right: DarkSlateBlue;
  scroll-snap-padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: DarkSlateBlue;
  -moz-scroll-snap-padding-right: DarkSlateBlue;
  -ms-scroll-snap-padding-right: DarkSlateBlue;
  scroll-snap-padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-padding-right: DarkSlateBlue;
  -moz-scroll-snap-padding-right: DarkSlateBlue;
  -ms-scroll-snap-padding-right: DarkSlateBlue;
  scroll-snap-padding-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
